[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sqliteORM"
description = "Un package pour avoir une implémentation orientée objet de sqlite3"
version = "0.2.1"
authors = [
    {name = "Combattant54", email = "combat54ant@gmail.com"}
]
dependencies = [
]