[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sqliteORM"
description = "Un package pour avoir une implémentation orientée (synchrone et asynchrone) objet de sqlite3"
version = "0.3.5"
authors = [
    {name = "Combattant54", email = "combat54ant@gmail.com"}
]
dependencies = [
]

[project.optional-dependencies]
async = [
    "asyncio",
    "aiosqlite>=0.19.0"
]

all = [
    "sqliteORM[async]"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.examples", "*.test"]